--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,10 @@
 			<artifactId>activemq-camel</artifactId>
 			<version>5.11.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.bakerbeach.market</groupId>
+			<artifactId>market-payment</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
